--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <option value="daily">Daily</option>
         <option value="weekly">Weekly</option>
         <option value="biweekly" selected>Every Two Weeks</option>
-        <option value="semi_monthly">Twice a Month</option>
+        <option value="semi_monthly">Twice a Month (Semi-Monthly)</option>
         <option value="monthly">Monthly</option>
         <option value="quarterly">Quarterly</option>
       </select>
